--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -1,5 +1,14 @@
-django
-djangorestframework
-django-cors-headers
-pyyaml
-requests
+asgiref==3.6.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+Django==4.2.1
+django-cors-headers==4.0.0
+djangorestframework==3.14.0
+idna==3.4
+Pillow==9.5.0
+pytz==2023.3
+PyYAML==6.0
+requests==2.30.0
+sqlparse==0.4.4
+tzdata==2023.3
+urllib3==2.0.2
